
[project]
name = "star-organizer"
authors = [{ name = "TWooding" }]
version = "0.1.0"
description = "A command-line tool that helps you organize your GitHub starred repositories."
keywords = ["GitHub", "starred", "repositories", "organize"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = ["requests"]

[project.scripts]
star-organizer = "star_organizer.program:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
